removed more unused code added more comments